Add operating hours sensors for pellet operation and heating

--- a/custom_components/froeling_lambdatronic_modbus/translations/de.json
+++ b/custom_components/froeling_lambdatronic_modbus/translations/de.json
@@ -203,6 +203,12 @@
       },
       "rueckschaltverzoegerung_zweitkessel_umschaltventil": {
         "name": "Rückschaltverzögerung des Zweitkessel Umschaltventil"
+      },
+      "Stunden_im_Pelletsbetrieb": {
+        "name": "Stunden im Pelletsbetrieb"
+      },
+      "Stunden_im_Heizen": {
+        "name": "Stunden im Heizen"
       }
     },
     "number": {
